# talks

./: AncientMathModernC++CppSthlm17.odp  FromTypeToConceptCppSthlm06.odp  ProgrammingWithConceptsCppSthlm25.odp  README.md  TheDarkArtOfTypeFunctionsCppSthlm11.odp  generic.py  math.cpp
wirth-parser/: CMakeLists.txt  README.md
wirth-parser/include/: ast.h  parser.h
wirth-parser/src/: ast.cpp  main.cpp  parser.cpp
